[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/o243h.png" type="Texture" id=1]
[ext_resource path="res://scripts/menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://style/default_theme.tres" type="Theme" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.159119
margin_top = 1.68321
margin_right = -0.15918
margin_bottom = 1.68329
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 1.68
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="AspectRatioContainer"]
margin_top = -4.76187
margin_right = 1024.0
margin_bottom = 604.762
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MainPanel" type="Panel" parent="."]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -175.0
margin_right = 125.0
margin_bottom = 175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButtons" type="VBoxContainer" parent="MainPanel"]
margin_left = 9.0
margin_top = 9.0
margin_right = 241.28
margin_bottom = 342.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MainPanel/OptionButtons"]
margin_right = 232.0
margin_bottom = 49.0
text = "START_NEW_GAME"

[node name="SetingsButton" type="Button" parent="MainPanel/OptionButtons"]
margin_top = 53.0
margin_right = 232.0
margin_bottom = 102.0
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="MainPanel/OptionButtons"]
margin_top = 106.0
margin_right = 232.0
margin_bottom = 155.0
text = "EXIT"
